--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		<link rel="stylesheet" type="text/css" href="style.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-		<script async src="./js/jquery-2.1.0.js"></script>
-		<script async src="./js/bootstrap.min.js"></script>
-		<script async src="./js/blocs.min.js"></script>
-		<script async src="./js/jquery.touchSwipe.min.js" ></script>
-		<script async src="./js/gmaps.min.js"></script>
+		<script defer src="./js/jquery-2.1.0.js"></script>
+		<script defer src="./js/bootstrap.min.js"></script>
+		<script defer src="./js/blocs.min.js"></script>
+		<script defer src="./js/jquery.touchSwipe.min.js" ></script>
+		<script defer src="./js/gmaps.min.js"></script>
 	</head>
 	<body>
 		<!-- Principal conteneur -->
@@ -59,139 +59,142 @@
 				</div>
 			</div>
 			<!-- bloc-1-presentation END -->
-			<!-- bloc-2-services -->
-			<main class="bloc bgc-white l-bloc" id="bloc-2-services">
-				<div class="container bloc-md">
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<h2 class="mg-md text-center">
-								L'agence La Panthère est une agence de webdesign qui aide<br>les entreprises à devenir attractives et visibles sur internet.</h2>
+			<main>
+				<!-- bloc-2-services -->
+				<section class="bloc bgc-white l-bloc" id="bloc-2-services">
+					<div class="container bloc-md">
+						<div class="row">
+							<div class="col-sm-12 text-center">
+								<h2 class="mg-md text-center">
+									L'agence La Panthère est une <strong>agence de webdesign</strong> qui aide<br>les entreprises à devenir <strong>attractives et visibles sur internet.</strong>
+								</h2>
+							</div>
+						</div>
+						<div class="row voffset-lg med-width-whitespace">
+							<div class="col-sm-4">
+								<div class="text-center">
+									<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								</div>
+								<h3 class="mg-md text-center">
+									Web design
+								</h3>
+								<p class="text-center ">
+									Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+								</p>
+							</div>
+							<div class="col-sm-4">
+								<div class="text-center">
+									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								</div>
+								<h3 class="mg-md text-center">
+									&nbsp;Stratégie
+								</h3>
+								<p class="text-center ">
+									Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+								</p>
+							</div>
+							<div class="col-sm-4">
+								<div class="text-center">
+									<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+								</div>
+								<h3 class="mg-md text-center">
+									Illustrations
+								</h3>
+								<p class="text-center ">
+									Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+								</p>
+							</div>
+						</div>
+						<div class="row voffset-lg voffset">
+							<div class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
+								<strong>"L'agence La Panthère est une excellente agence web!<br> Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.<br> Cela nous a aidé à doubler nos ventes en ligne à Lyon."</strong><br>Maxime Guibard, PDG de À vos fourchettes.
+							</div>
 						</div>
 					</div>
-					<div class="row voffset-lg med-width-whitespace">
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+				</section>
+				<!-- bloc-2-services END -->
+				<!-- bloc-3-what-i-do -->
+				<div class="bloc tc-white bgc-atomic-tangerine bg-presentation  d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+					<div class="container bloc-lg">
+						<div class="row tight-width-whitespace black-background">
+							<div class="col-sm-12">
+								<h2 class="mg-md text-center tc-white">
+									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+								</h2>
+								<p class="text-center white">
+									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
+								</p>
 							</div>
-							<h3 class="mg-md text-center">
-								Web design
-							</h3>
-							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
-							</p>
-						</div>
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-							</div>
-							<h3 class="mg-md text-center">
-								&nbsp;Stratégie
-							</h3>
-							<p class="text-center ">
-								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
-							</p>
-						</div>
-						<div class="col-sm-4">
-							<div class="text-center">
-								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-							</div>
-							<h3 class="mg-md text-center">
-								Illustrations
-							</h3>
-							<p class="text-center ">
-								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-							</p>
-						</div>
-					</div>
-					<div class="row voffset-lg voffset">
-						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
-							<strong>"L'agence La Panthère est une excellente agence web!<br> Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.<br> Cela nous a aidé à doubler nos ventes en ligne à Lyon."</strong><br>Maxime Guibard, PDG de À vos fourchettes.
 						</div>
 					</div>
 				</div>
-			</main>
-			<!-- bloc-2-services END -->
-			<!-- bloc-3-what-i-do -->
-			<div class="bloc tc-white bgc-atomic-tangerine bg-presentation  d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
-				<div class="container bloc-lg">
-					<div class="row tight-width-whitespace black-background">
-						<div class="col-sm-12">
+				<!-- bloc-3-what-i-do END -->
+				<!-- bloc-4-portfolio -->
+				<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+					<div class="container bloc-lg">
+						<div class="row">
+							<div class="col-sm-12 text-center">
+								<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+							</div>
+						</div>
+						<div class="row tight-width-whitespace portfolio-row">
+							<div class="col-sm-6">
+								<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="Image de magazines colorés, superposés en cascades" class="img-responsive portfolio-thumb" loading="lazy"></a>
+								<h3 class="mg-md text-center">
+									Refonte d'un site web pour un journal local
+								</h3>
+								<p class="text-center">
+									Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
+								</p>
+							</div>
+							<div class="col-sm-6">
+								<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="photo d'une femme assise au sol regardant dans un téléobjectif" loading="lazy"></a>
+								<h3 class="mg-md text-center">
+									Création d'un site web pour photographes
+								</h3>
+								<p class="text-center">
+									Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
+								</p>
+							</div>
+						</div>
+						<div class="row tight-width-whitespace portfolio-row">
+							<div class="col-sm-6">
+								<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="photo de matériel informatique et de photographie" loading="lazy"></a>
+								<h3 class="mg-md text-center">
+									Création d'un site internet pour un voyageur
+								</h3>
+								<p class="text-center">
+									Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
+								</p>
+							</div>
+							<div class="col-sm-6">
+								<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Photo de deux personnes qui travaillent sur une table avec des accessoires" loading="lazy"></a>
+								<h3 class="mg-md text-center">
+									Conception d'un site pour une agence de mariage
+								</h3>
+								<p class="text-center">
+									Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
+								</p>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- bloc-4-portfolio END -->
+				<!-- bloc-5-cta -->
+				<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+					<div class="container bloc-lg">
+						<div class="row">
 							<h2 class="mg-md text-center tc-white">
-								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 							</h2>
-							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
-							</p>
+							<div class="col-sm-12 text-center">
+								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- bloc-3-what-i-do END -->
-			<!-- bloc-4-portfolio -->
-			<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-				<div class="container bloc-lg">
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
-						</div>
-					</div>
-					<div class="row tight-width-whitespace portfolio-row">
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="Image de magasines colorés, superposés en cascades" class="img-responsive portfolio-thumb" loading="lazy"></a>
-							<h3 class="mg-md text-center">
-								Refonte d'un site web pour un journal local
-							</h3>
-							<p class="text-center">
-								Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
-							</p>
-						</div>
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="photo d'une femme assise au sol regardant dans un téléobjectif" loading="lazy"></a>
-							<h3 class="mg-md text-center">
-								Création d'un site web pour photographes
-							</h3>
-							<p class="text-center">
-								Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
-							</p>
-						</div>
-					</div>
-					<div class="row tight-width-whitespace portfolio-row">
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="photo de matériel informatique et de photographie" loading="lazy"></a>
-							<h3 class="mg-md text-center">
-								Création d'un site internet pour un voyageur
-							</h3>
-							<p class="text-center">
-								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
-							</p>
-						</div>
-						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Photo de deux personnes qui travaillent sur une table avec des accessoires" loading="lazy"></a>
-							<h3 class="mg-md text-center">
-								Conception d'un site pour une agence de mariage
-							</h3>
-							<p class="text-center">
-								Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- bloc-4-portfolio END -->
-			<!-- bloc-5-cta -->
-			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-				<div class="container bloc-lg">
-					<div class="row">
-						<h2 class="mg-md text-center tc-white">
-							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-						</h2>
-						<div class="col-sm-12 text-center">
-							<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- bloc-5-cta END -->
+				<!-- bloc-5-cta END -->
+			</main>
 			<!-- ScrollToTop Button -->
 			<a href="#" title="flèche pour remonter en haut de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
