--- a/page2.html
+++ b/page2.html
@@ -6,17 +6,17 @@
 		<meta name="description" content="L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<meta name="robots" content="index, follow">
-		<title>Contactez La Panthère - Entreprise de Webdesign à Lyon -</title>
+		<title>Contacter La Panthère - Entreprise de Webdesign à Lyon -</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-		<script async src="./js/jquery-2.1.0.js"></script>
-		<script async src="./js/bootstrap.min.js"></script>
-		<script async src="./js/blocs.min.js"></script>
-		<script async src="./js/jqBootstrapValidation.min.js"></script>
-		<script async src="./js/formHandler.min.js"></script>
+		<script defer src="./js/jquery-2.1.0.js"></script>
+		<script defer src="./js/bootstrap.min.js"></script>
+		<script defer src="./js/blocs.min.js"></script>
+		<script defer src="./js/jqBootstrapValidation.min.js"></script>
+		<script defer src="./js/formHandler.min.js"></script>
 	</head>
 	<body>
 		<!-- Principal conteneur -->
@@ -45,64 +45,65 @@
 				</div>
 			</header>
 			<!-- bloc-0 END -->
-			<!-- bloc-6 -->
-			<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-				<div class="container bloc-lg">
-					<div class="row">
-						<div class="col-sm-12">
-							<h1 class="text-center hero-bloc-text">
-								Parlons web design !
-							</h1>
-							<p class="text-center mg-lg tight-width-whitespace">
-								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-							</p>
+			<main>
+				<!-- bloc-6 -->
+				<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+					<div class="container bloc-lg">
+						<div class="row">
+							<div class="col-sm-12">
+								<h1 class="text-center hero-bloc-text">
+									Parlons web design !
+								</h1>
+								<p class="text-center mg-lg tight-width-whitespace">
+									Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+									Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- bloc-6 END -->
-
-			<!-- bloc-7 -->
-			<div class="bloc bgc-white l-bloc" id="bloc-7">
-				<div class="container bloc-lg">
-					<div class="row">
-						<div class="col-sm-6">
-							<form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-								<div class="form-group">
-									<label>
-										Nom <input id="name" class="form-control" required>
-									</label>
-								</div>
-								<div class="form-group">
-									<label>
-										Adresse email <input id="email" class="form-control" type="email" required>
-									</label>
-								</div>
-								<div class="form-group">
-									<label>
-										Comment nous avez-vous connu ?<input class="form-control" type="text" required id="input_504">
-									</label>
-								</div>
-								<div class="form-group">
-									<label>
-										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-									</label>
-								</div> 
-								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-									Envoyer
-								</button>
-							</form>
-						</div>
-						<div class="col-sm-6">
-							<p>
-								contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-							</p>
+				<!-- bloc-6 END -->
+				<!-- bloc-7 -->
+				<div class="bloc bgc-white l-bloc" id="bloc-7">
+					<div class="container bloc-lg">
+						<div class="row">
+							<div class="col-sm-6">
+								<form id="form_1" novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+									<div class="form-group">
+										<label>
+											Nom <input id="name" class="form-control" required>
+										</label>
+									</div>
+									<div class="form-group">
+										<label>
+											Adresse email <input id="email" class="form-control" type="email" required>
+										</label>
+									</div>
+									<div class="form-group">
+										<label>
+											Comment nous avez-vous connu ?<input class="form-control" type="text" required id="input_504">
+										</label>
+									</div>
+									<div class="form-group">
+										<label>
+											Brief de votre projet (Ajoutez autant de détails que nécessaire)<br><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+										</label>
+									</div> 
+									<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+										Envoyer
+									</button>
+								</form>
+							</div>
+							<div class="col-sm-6">
+								<p>
+									contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- bloc-7 END -->
+				<!-- bloc-7 END -->
+			</main>
 			<!-- Footer - bloc-8 -->
 			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 				<div class="container bloc-sm">
