--- a/accueil.html
+++ b/accueil.html
@@ -9,14 +9,14 @@
 		<title>La Panthère - Entreprise de Webdesign à Lyon</title>	
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-		<script async src="./js/jquery-2.1.0.js"></script>
-		<script async src="./js/bootstrap.min.js"></script>
-		<script async src="./js/blocs.min.js"></script>
-		<script async src="./js/jquery.touchSwipe.min.js" ></script>
-		<script async src="./js/gmaps.min.js"></script>
+		<script rel="preload" src="./js/jquery-2.1.0.js" defer></script>
+		<script rel="preload" src="./js/bootstrap.min.js" defer></script>
+		<script rel="preload" src="./js/blocs.min.js" defer></script>
+		<script rel="preload" src="./js/jquery.touchSwipe.min.js" defer></script>
+		<script rel="preload" src="./js/gmaps.min.js" defer></script>
 	</head>
 	<body>
 		<!-- Principal conteneur -->
@@ -26,18 +26,23 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Logo de l'agence, une tête de panthère, suivi de son nom" height="40" width="217"></a>
+							<a class="navbar-brand" href="accueil.html">
+								<img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence, une tête de panthère, suivi de son nom" width="150" height="150">
+							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
 							</button>
 						</div>
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">	
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a href="index.html">Accueil</a>
+									<a href="accueil.html">Accueil</a>
 								</li>
 								<li>
-									<a href="page2.html">Contact</a>
+									<a href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -50,7 +55,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100" alt="Logo de l'agence, une tête de panthère">
+							<img src="img/logo.webp" class="center-block image-resize-mode" alt="Logo de l'agence, une tête de panthère">
 							<h1 class="text-center hero-bloc-text tc-white ">
 								Agence La Panthère
 							</h1>
@@ -66,7 +71,7 @@
 						<div class="row">
 							<div class="col-sm-12 text-center">
 								<h2 class="mg-md text-center">
-									L'agence La Panthère est une <strong>agence de webdesign</strong> qui aide<br>les entreprises à devenir <strong>attractives et visibles sur internet.</strong>
+									L'agence La Panthère est une <strong>agence de webdesign</strong> qui aide les entreprises à devenir<strong> attractives et visibles sur internet.</strong>
 								</h2>
 							</div>
 						</div>
@@ -79,7 +84,7 @@
 									Web design
 								</h3>
 								<p class="text-center ">
-									Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+									Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 								</p>
 							</div>
 							<div class="col-sm-4">
@@ -87,7 +92,7 @@
 									<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 								</div>
 								<h3 class="mg-md text-center">
-									&nbsp;Stratégie
+									Stratégie
 								</h3>
 								<p class="text-center ">
 									Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -105,16 +110,21 @@
 								</p>
 							</div>
 						</div>
-						<div class="row voffset-lg voffset">
-							<div class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
-								<strong>"L'agence La Panthère est une excellente agence web!<br> Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.<br> Cela nous a aidé à doubler nos ventes en ligne à Lyon."</strong><br>Maxime Guibard, PDG de À vos fourchettes.
-							</div>
-						</div>
+						<figure class="row voffset-lg voffset">
+							<blockquote class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+								<p>
+									"L'agence La Panthère est une excellente agence web! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."
+								</p>
+							</blockquote>
+							<figcaption class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+								Maxime Guibard, PDG de À vos fourchettes.
+							</figcaption>
+						</figure>
 					</div>
 				</section>
 				<!-- bloc-2-services END -->
 				<!-- bloc-3-what-i-do -->
-				<div class="bloc tc-white bgc-atomic-tangerine bg-presentation  d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+				<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 					<div class="container bloc-lg">
 						<div class="row tight-width-whitespace black-background">
 							<div class="col-sm-12">
@@ -139,7 +149,9 @@
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="Image de magazines colorés, superposés en cascades" class="img-responsive portfolio-thumb" loading="lazy"></a>
+								<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+									<img src="img/1.webp" alt="Image de magazines colorés, superposés en cascades" class="img-responsive portfolio-thumb" loading="lazy">
+								</a>
 								<h3 class="mg-md text-center">
 									Refonte d'un site web pour un journal local
 								</h3>
@@ -148,7 +160,9 @@
 								</p>
 							</div>
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="photo d'une femme assise au sol regardant dans un téléobjectif" loading="lazy"></a>
+								<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+									<img src="img/2.webp" class="img-responsive portfolio-thumb" alt="photo d'une femme assise au sol regardant dans un téléobjectif" loading="lazy">
+								</a>
 								<h3 class="mg-md text-center">
 									Création d'un site web pour photographes
 								</h3>
@@ -159,7 +173,9 @@
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="photo de matériel informatique et de photographie" loading="lazy"></a>
+								<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+									<img src="img/3.webp" class="img-responsive portfolio-thumb" alt="photo de matériel informatique et de photographie" loading="lazy">
+								</a>
 								<h3 class="mg-md text-center">
 									Création d'un site internet pour un voyageur
 								</h3>
@@ -168,7 +184,9 @@
 								</p>
 							</div>
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Photo de deux personnes qui travaillent sur une table avec des accessoires" loading="lazy"></a>
+								<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+									<img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Photo de deux personnes qui travaillent sur une table avec des accessoires" loading="lazy">
+								</a>
 								<h3 class="mg-md text-center">
 									Conception d'un site pour une agence de mariage
 								</h3>
@@ -188,7 +206,7 @@
 								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 							</h2>
 							<div class="col-sm-12 text-center">
-								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+								<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -196,7 +214,9 @@
 				<!-- bloc-5-cta END -->
 			</main>
 			<!-- ScrollToTop Button -->
-			<a href="#" title="flèche pour remonter en haut de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			<a href="#" title="flèche pour remonter en haut de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+				<span class="fa fa-chevron-up"></span>
+			</a>
 			<!-- ScrollToTop Button END-->
 			<!-- Footer - bloc-8 -->
 			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
@@ -204,27 +224,35 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<p class="text-center white">
-								Agence La Panthère - Agence web basée à Lyon.<br>
+								Agence La Panthère - Agence web basée à Lyon.
 							</p>
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://twitter.com" title="lien twitter"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="https://twitter.com" title="lien twitter">
+											<span class="fa fa-twitter icon-md"></span>
+										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://fr-fr.facebook.com" title="lien facebook"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="https://fr-fr.facebook.com" title="lien facebook">
+											<span class="fa fa-facebook icon-md"></span>
+										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://dribbble.com" title="lien dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="https://dribbble.com" title="lien dribbble">
+											<span class="fa fa-dribbble icon-md"></span>
+										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://www.instagram.com" title="lien instagram"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="https://www.instagram.com" title="lien instagram">
+											<span class="fa fa-instagram icon-md"></span>
+										</a>
 									</div>
 								</div>
 							</div>
