--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<meta name="keywords" content="entreprise webdesign Lyon">
 		<meta name="description" content="L'agence La Panthère est une agence de webdesign qui aide les entreprises à devenir attractives et visibles sur internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<meta name="robots" content="index, follow">	
 		<title>La Panthère - Entreprise de Webdesign à Lyon</title>	
+
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/style.min.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-		<script rel="preload" src="./js/jquery-2.1.0.js" defer></script>
-		<script rel="preload" src="./js/bootstrap.min.js" defer></script>
+
+		<script rel="preload" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" defer></script>
+		<script rel="preload" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
 		<script rel="preload" src="./js/blocs.min.js" defer></script>
-		<script rel="preload" src="./js/jquery.touchSwipe.min.js" defer></script>
-		<script rel="preload" src="./js/gmaps.min.js" defer></script>
+		<script rel="preload" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js" defer></script>
+		<script rel="preload" src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js" integrity="sha512-gauu0VKZq9ry8hOZHgNpcB2ogbSDojs+XLDItpOLY0IyA+KigeuT/suwSdPgfU/TGYLAn4Nan4OeaCa/UPr70Q==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 	</head>
 	<body>
 		<!-- Principal conteneur -->
@@ -222,7 +223,7 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white">
+							<p class="text-center">
 								Agence La Panthère - Agence web basée à Lyon.
 							</p>
 							<div class="row row-no-gutters social">
